--- a/src/h5.html
+++ b/src/h5.html
@@ -62,7 +62,7 @@ span{
 <body>
 	<a href="h4.html"><img src="img/s9.png"  class="c" /><br></a>
 <div class="op"> 
-	<a href=""><img src="img/s1.png" onclick="alert('Option Denied!...Use Command-Prompt to crack Password')" class="a" /></a>   <a href="cmd.html"><img src="img/s3.png"   class="b" /></a><br>
+	<a href=""><img src="img/s1.png" onclick="alert('Option Denied!...Use Command-Prompt to crack Password')" class="a" /></a>   <a href="./cmd/cmd.html"><img src="img/s3.png"   class="b" /></a><br>
     <a href=""><img src="img/s2.png"  onclick="alert('Option Denied!...Use Command-Prompt to crack Password')" class="a" /></a>   <a href=""><img src="img/s4.png"  onclick="alert('Option Denied!...Use Command-Prompt to crack Password')"  class="b" /></a>
 <script type="text/javascript">
 	
