--- a/src/levels/level1.html
+++ b/src/levels/level1.html
@@ -79,14 +79,9 @@ C:\Users\Hacker123>dir
 
 04/27/2020  06:03 PM    DIR          .
 04/27/2020  06:03 PM    DIR          ..
-04/30/2020  12:03 AM    DIR          Desktop
-04/28/2020  04:22 AM    DIR          Documents
-04/28/2020  09:21 AM    DIR          Downloads
-01/31/2020  06:46 PM    DIR          Favorites
-01/31/2020  06:46 PM    DIR          Links
-04/27/2020  01:39 AM    DIR          Music
-04/27/2020  03:46 PM    DIR          Pictures
-04/25/2020  05:37 PM    DIR          Videos
+04/30/2020  12:03 AM    DIR          ZHackers.exe
+04/28/2020  04:22 AM    DIR          Message.exe
+04/28/2020  04:22 AM    DIR          Soft.rar
 </pre>
 </div>
 <div class="attrib">
@@ -287,7 +282,7 @@ C:\Users\Hacker123>attrib -r -s -h /s /d
 
 <div class="taskb"> 
 <center>
-    <img src="../img/winc.png" width="20" height="20" class="c1" id="winc">
+    <img src="../img/winm.png" width="20" height="20" class="c1" id="winc">
 
     <img src="../img/sch.png" width="20" height="20" class="c2">
     
