--- a/src/old/level1a.html
+++ b/src/old/level1a.html
@@ -485,7 +485,7 @@ next mition.<br></pre>
 
 <div class="taskb"> 
 
-<img src="img/winc.png" width="20" height="20" class="c1" id="winc">
+<img src="img/winm.png" width="20" height="20" class="c1" id="winc">
 
 <img src="img/sch.png" width="20" height="20" class="c2">
 
