--- a/src/old/level1c.html
+++ b/src/old/level1c.html
@@ -473,7 +473,7 @@ A            C:\Users\Hacker123\Desktop\wincraker.bat
 
 <div class="taskb"> 
 
-<img src="img/winc.png" width="20" height="20" class="c1" id="winc">
+<img src="img/winm.png" width="20" height="20" class="c1" id="winc">
 
 <img src="img/sch.png" width="20" height="20" class="c2">
 
