--- a/src/levels/level1b.html
+++ b/src/levels/level1b.html
@@ -546,7 +546,7 @@ C:\Users\Hacker123\Desktop>attrib -r -s -h /d
 
 <div class="taskb"> 
 
-<img src="img/winc.png" width="20" height="20" class="c1" id="winc">
+<img src="img/winm.png" width="20" height="20" class="c1" id="winc">
 
 <img src="img/sch.png" width="20" height="20" class="c2">
 
