--- a/src/old/level1aa.html
+++ b/src/old/level1aa.html
@@ -502,7 +502,7 @@ C:\Users\Hacker123>dir
 
 <div class="taskb"> 
 
-<img src="img/winc.png" width="20" height="20" class="c1" id="winc">
+<img src="img/winm.png" width="20" height="20" class="c1" id="winc">
 
 <img src="img/sch.png" width="20" height="20" class="c2">
 
