--- a/src/cmd/cmd1.html
+++ b/src/cmd/cmd1.html
@@ -5,7 +5,7 @@
 </head>
 <style type="text/css">
     body{
-        background-image: url(img/startup3.png);
+        background-image: url(../img/startup3.png);
         background-repeat: no-repeat;
         background-size: cover;
     }
@@ -127,11 +127,11 @@ span{
     <center>
      <br><br><br>
 
-     <img src="img/cm1.jpg" class="p1">
-     <img src="img/cm2.jpg" class="p2">
-     <img src="img/cm3.jpg" class="p3">
-     <img src="img/cm4.jpg" class="p4">   
-     <img src="img/cm5.jpg" class="p5">
+     <img src="../img/cm1.jpg" class="p1">
+     <img src="../img/cm2.jpg" class="p2">
+     <img src="../img/cm3.jpg" class="p3">
+     <img src="../img/cm4.jpg" class="p4">   
+     <img src="../img/cm5.jpg" class="p5">
      </center>
     
      
@@ -141,14 +141,14 @@ span{
 </div>
     <button class="B1" id="help">HELP</button>
 
-    <a href="h5.html"><img src="img/s9.png"  class="c" /><br></a>
+    <a href="h5.html"><img src="../img/s9.png"  class="c" /><br></a>
 <div class="op"> 
-    <a href=""><img src="img/s1.png" onclick="alert('Option Denied!')"  class="a" /></a>   <a href=""><img src="img/s3.png"   class="b" /></a><br>
-    <a href=""><img src="img/s2.png" onclick="alert('Option Denied!')"  class="a" /></a>   <a href=""><img src="img/s4.png"  onclick="alert('Option Denied!')"  class="b" /></a>
+    <a href=""><img src="../img/s1.png" onclick="alert('Option Denied!')"  class="a" /></a>   <a href=""><img src="../img/s3.png"   class="b" /></a><br>
+    <a href=""><img src="../img/s2.png" onclick="alert('Option Denied!')"  class="a" /></a>   <a href=""><img src="../img/s4.png"  onclick="alert('Option Denied!')"  class="b" /></a>
 </div>
 <div  class="cmd">
-<div class="title"><img src="img/cmdlg.png" class="m" width="25" height="20" ><span>C:\Windows\system32\cmd.exe</span>
-   <a href="h5.html"> <button class="bt"><img src="img/exit.png"></button></a></div>
+<div class="title"><img src="../img/cmdlg.png" class="m" width="25" height="20" ><span>C:\Windows\system32\cmd.exe</span>
+   <a href="../h5.html"> <button class="bt"><img src="../img/exit.png"></button></a></div>
 
     <p>Microsoft Windows [Version 10.0.10586]<br>
 (c) 2015 Microsoft Corporation. All rights reserved.</p>
