--- a/src/h1.html
+++ b/src/h1.html
@@ -333,14 +333,14 @@ function login() {
 </script>
 <body>
 <audio autoplay>
-    <source src="audio/c.mp3" type="audio/mpeg">
+    <source src="./audio/c.mp3" type="audio/mpeg">
 </audio>
 <div class="loader">
     <pre>
- <img src="img/winm.png" class="logow" alt="windows logo">
+ <img src="./img/winm.png" class="logow" alt="windows logo">
 <br><br>
 
-     <img src="img/g.gif"  alt="Loading..."  width="75" height="75">   
+     <img src="./img/g.gif"  alt="Loading..."  width="75" height="75">   
     </pre>
     
 
@@ -349,7 +349,7 @@ function login() {
 
 <div class="a">
 
-             <img src="img/winm.png" width="200" height="200" />
+             <img src="./img/winm.png" width="200" height="200" />
              <h2 class="h-2">HacKer123</h2>
 </div>
       <form>
@@ -361,9 +361,9 @@ function login() {
              </form>
 <div class="b">
 
-             <img src="img/B3.png"  width="27" height="25" class="a1" />
-             <img src="img/B4.png"  width="40" height="34" class="a2" />
-           <a href="h2.html"><img src="img/c2.png" width="27" height="24" class="a3"  /></a>  
+             <img src="./img/B3.png"  width="27" height="25" class="a1" />
+             <img src="./img/B4.png"  width="40" height="34" class="a2" />
+           <a href="h2.html"><img src="./img/c2.png" width="27" height="24" class="a3"  /></a>  
 
 </div> 
 
