--- a/src/levels/level1e.html
+++ b/src/levels/level1e.html
@@ -5,7 +5,7 @@
 </head>
 <style type="text/css">
     body{
-        background-image: url(img/bg.jpg);
+        background-image: url(../img/bg.jpg);
         background-size: cover;
         background-repeat: no-repeat;
         background-color: black;
@@ -122,7 +122,7 @@ img:hover{
 .menu{
     display: none;
     background: rgba(255,255,255,.50);
-    box-shadow:background: rgba(35,30,30,.50);
+    box-shadow: rgba(35,30,30,.50);
     width:15%;
     font-size: 20px;
     position: absolute;
@@ -332,11 +332,11 @@ button{
   <div class="all">
  <div class="winra">
    <div class="close1">+</div>
-  <img src="img/soft.png" width="17" height="17">  soft.rar
+  <img src="../img/soft.png" width="17" height="17">  soft.rar
    <div class="white">
 <pre>
 Name                  | Size | Packed | Type 
-<a href="" class="col"><img src="img/wpv.png" width="15" height="13">WebBrowserPas..       408,088  243,245   Application</a>
+<a href="" class="col"><img src="../img/wpv.png" width="15" height="13">WebBrowserPas..       408,088  243,245   Application</a>
 
     </pre>
    </div>
@@ -361,7 +361,7 @@ Name                  | Size | Packed | Type
 
 
  <div  class="cmd">
-<div class="title"><img src="img/cmdlg.png" class="m" width="25" height="20" ><span class="tl">C:\Windows\system32\cmd.exe</span>
+<div class="title"><img src="../img/cmdlg.png" class="m" width="25" height="20" ><span class="tl">C:\Windows\system32\cmd.exe</span>
    <div class="close3">+</div> 
   <span class="span">
      <p>Microsoft Windows [Version 10.0.10586]<br>
@@ -422,15 +422,15 @@ C:\Users\Hacker123\Desktop>attrib -r -s -h /d
     <div class="close">+</div>
     
     <div class="winc">
-        <img src="img/d1.jpg" width="150" height="90">
-        <img src="img/d2.png" width="150" height="90">
+        <img src="../img/d1.jpg" width="150" height="90">
+        <img src="../img/d2.png" width="150" height="90">
         <br>
-        <img src="img/d4.png" width="150" height="90">
-        <img src="img/d3.png" width="150" height="90">
+        <img src="../img/d4.png" width="150" height="90">
+        <img src="../img/d3.png" width="150" height="90">
         <br>
-        <a href="level1.html"><img src="img/lvb1.jpg" width="150" height="90"></a>
+        <a href="level1.html"><img src="../img/lvb1.jpg" width="150" height="90"></a>
     </div>  
-    <a href="h0.html"><img src="img/fh.png" class="shutb" width="30" height="30"></a>
+    <a href="h0.html"><img src="../img/fh.png" class="shutb" width="30" height="30"></a>
 </div>
  </div>
 
@@ -438,19 +438,19 @@ C:\Users\Hacker123\Desktop>attrib -r -s -h /d
 
      <div class="a">
     <div class="dragzone" ondragover="allowdrop(event)" ondrop="drop(event)">
-       <img src="img/logob.png"   width="50" height="48" id="dragelement" ondragstart="dragstart(event)" class="tra">
+       <img src="../img/logob.png"   width="50" height="48" id="dragelement" ondragstart="dragstart(event)" class="tra">
         <pre>  trash </pre>
     </div>
     <div class="dragzone" ondragover="allowdrop(event)" ondrop="drop(event)">
-        <a href="Rc.html"> <img src="img/logo1.ico"   width="50" height="45" id="dragelement1" ondragstart="dragstart(event)" >
+        <a href="Rc.html"> <img src="../img/logo1.ico"   width="50" height="45" id="dragelement1" ondragstart="dragstart(event)" >
             <pre> ZHackers </pre></a>
     </div>
      <div class="dropzone" ondragover="allowdrop(event)" ondrop="drop(event)">
-       <img src="img/meil2.gif"   width="50" height="45" id="dragelement1" ondragstart="dragstart(event)" class="ml" >
+       <img src="../img/meil2.gif"   width="50" height="45" id="dragelement1" ondragstart="dragstart(event)" class="ml" >
             <pre class="mail"> Message </pre>
     </div>
     <div class="dragzone" ondragover="allowdrop(event)" ondrop="drop(event)">
-       <img src="img/soft.png"   width="50" height="45" id="dragelement1" ondragstart="dragstart(event)" class="et">
+       <img src="../img/soft.png"   width="50" height="45" id="dragelement1" ondragstart="dragstart(event)" class="et">
             <pre>  soft </pre>
     </div>
      <div class="dropzone" ondragover="allowdrop(event)" ondrop="drop(event)">
@@ -614,15 +614,15 @@ C:\Users\Hacker123\Desktop>attrib -r -s -h /d
 
 <div class="taskb"> 
 
-<img src="img/winc.png" width="20" height="20" class="c1" id="winc">
+<img src="../img/winm.png" width="20" height="20" class="c1" id="winc">
 
-<img src="img/sch.png" width="20" height="20" class="c2">
+<img src="../img/sch.png" width="20" height="20" class="c2">
 
-<img src="img/cmdlg.png" width="20" height="20" class="c3">
+<img src="../img/cmdlg.png" width="20" height="20" class="c3">
 
-<img src="img/store.png" width="20" height="20" class="c4">
+<img src="../img/store.png" width="20" height="20" class="c4">
 
-<img src="img/wins.jpg" width="20" height="20" class="c5">
+<img src="../img/wins.jpg" width="20" height="20" class="c5">
 
 
 </div>
