--- a/src/h1.html
+++ b/src/h1.html
@@ -28,6 +28,8 @@ window.addEventListener("keydown", function checkkeyPress(key){
 });
 
 /*javascript Event*/
+
+/*Main notification*/
 function notify(type,message){
   (()=>{
     let n = document.createElement("div");
@@ -47,6 +49,8 @@ function notify(type,message){
     },5000);
   })();
 }
+
+/*notification templetes*/
 
 function notifySuccess(){
   notify("success","This is demo success notification message");
@@ -360,10 +364,9 @@ function login() {
              <input type="" class="tra" placeholder="Sign-in options" size="9"/>
              </form>
 <div class="b">
-
-             <img src="img/B3.png"  width="27" height="25" class="a1" />
-             <img src="img/B4.png"  width="40" height="34" class="a2" />
            <a href="h2.html"><img src="img/c2.png" width="27" height="24" class="a3"  /></a>  
+           <img src="img/B4.png"  width="40" height="34" class="a2" />
+             <img src="img/B3.png"  width="27" height="25" class="a1" />
 
 </div> 
 
