--- a/src/old/level1a.html
+++ b/src/old/level1a.html
@@ -122,7 +122,7 @@ img:hover{
 .menu{
     display: none;
     background: rgba(255,255,255,.50);
-    box-shadow:background: rgba(35,30,30,.50);
+    box-shadow: rgba(35,30,30,.50);
     width:15%;
     font-size: 20px;
     position: absolute;
