--- a/src/h1.html
+++ b/src/h1.html
@@ -250,9 +250,9 @@ function login() {
             alert(password+'  is not necessary at this moment.' );
         }
         
-        else if (password == 'Who-am-i') {
+        else if (password == 'JNqey_4_eTrAyPMUKI2w7r1jRPwB3NIj4JBwIwg46o4') {
          location.replace("levels/level1.html")
-        }else if (password == 'who-am-i') {
+        }else if (password == 'JNqey_4_eTrAyPMUKI2w7r1jRPwB3NIj4JBwIwg46o4') {
             location.replace("levels/level1.html")
         }
 
