--- a/src/h4.html
+++ b/src/h4.html
@@ -5,9 +5,7 @@
 </head>
 <style type="text/css">
 	body{
-		background-image: url(img/startup2.png);
-		background-repeat: no-repeat;
-		background-size: cover;
+		background-color: #2067b2;
 	}
 .op{
 	margin-top: 50px;
