Disabled wel gif for quick reload

--- a/src/levels/level1.html
+++ b/src/levels/level1.html
@@ -17,9 +17,10 @@
 </audio>
 
 <!-- loading MAP -->
-<div class="loader">
+//disabled for quick reload
+<!-- <div class="loader">
 <img src="../img/wel.gif" alt="Loading..." />
-</div>
+</div> -->
 
 <!-- selet your level -->
 <div class="level">
