--- a/src/levels/level1.html
+++ b/src/levels/level1.html
@@ -64,10 +64,9 @@
     </audio>
 
     <!-- loading MAP -->
-    <!-- Temporary disabled for quick reload -->
-    <!-- <div class="loader">
+     <div class="loader">
 <img src="../img/wel.gif" alt="Loading..." />
-</div> -->
+</div>
 
     <!-- selet your level -->
     <div class="level">
