--- a/src/levels/level1.html
+++ b/src/levels/level1.html
@@ -5,57 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>123.0.0.1</title>
     <link rel="stylesheet" href="../styles/levels.css" />
-    <link rel="stylesheet" href="cmd.css" />
-
-    <style>
-      /* *{
-          color:green;
- } */
-      /* Add any additional CSS styles here if needed */
-      .command-output {
-        color: green;
-        font-family: monospace;
-      }
-      .title {
-        position: sticky;
-        top: 0;
-        background-color: #454141;
-        padding: 10px;
-        z-index: 2; /* Optional: Set a higher z-index to make it appear above other content */
-      }
-
-      /* Style the input container to be to the right of the prompt */
-      #cmd-input-container {
-        color: green;
-        /* display: flex; */
-        align-items: center;
-        /* background-color: red; */
-        margin-left: -5px;
-      }
-      #draggable-cmd {
-        height: 400px; /* Set a fixed height for the scrollable area */
-        overflow: auto; /* Enable scrolling for this div */
-      }
-      /* Style the prompt */
-
-      .user-input {
-        flex: 0 0 auto; /* Prevent the prompt from growing */
-        color: green;
-        font-size: 13px;
-        font-family: monospace;
-      }
-      .CmdTitle {
-        font-family: "Courier New", Courier, monospace;
-        color: #fff;
-        font-size: 14px;
-      }
-
-      /* Style the input field */
-      .cmd-input {
-        color: green;
-        flex-grow: 1; /* Allow the input field to expand */
-      }
-    </style>
+    <link rel="stylesheet" href="level1.css"/>
+    <link rel="stylesheet" href="cmd.css" />    
   </head>
 
   <body>
