--- a/src/levels/level1.html
+++ b/src/levels/level1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>123.0.0.1</title>
     <link rel="stylesheet" href="../styles/levels.css" />
-    <link rel="stylesheet" href="level1.css"/>
+    <link rel="stylesheet" href="level1.css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
     <link rel="stylesheet" href="cmd.css" />    
   </head>
 
